--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/LeonardoReyesCa/LeonardoReyesCa.github.io/master/images/Captura%20de%20Pantalla%202020-10-28%20a%20la(s)%203.28.05%20p.%20m..png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/LeonardoReyesCa/LeonardoReyesCa.github.io/master/images/Captura%20de%20Pantalla%202020-10-28%20a%20la(s)%203.28.05%20p.%20m.png" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
 			</header>
