--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/LeonardoReyesCa/LeonardoReyesCa.github.io/master/images/Captura%20de%20Pantalla%202020-10-28%20a%20la(s)%203.28.05%20p.%20m.png" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Leonardo Reyes Catolico</strong>, Industrial Designer.<br />
+				<h1><strong>Leonardo Reyes Catolico</strong>, Industrial Designer <br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -72,7 +72,7 @@
 		<!-- El área final -->				
 				<ul class="copyright">
 					
-					<li>&copy; Curso de Marca Personal</li><li><a href="http://platzi.com" target="_blank">Platzi</a></li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Leonardo Reyes Católico </li><li><a href="http://platzi.com" target="_blank">Platzi</a></li><li>Diseño: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
